--- a/styles.css
+++ b/styles.css
@@ -145,10 +145,10 @@ p {
 
 #rsvpForm .btn {
   width: 80px; /* Imposta la stessa larghezza per entrambi */
-  height: 30px; /* Imposta la stessa altezza per entrambi */
+  height: 40px; /* Imposta la stessa altezza per entrambi */
   font-size: 0.9em; /* Mantiene il testo leggibile */
   text-align: center;
-  padding: 6px 0; /* Allinea verticalmente il testo */
+  padding: 6px 12px; /* Allinea verticalmente il testo */
   border-radius: 6px; /* Smussa gli angoli */
   background-color: #ffffff; 
   color: #A67C52; /* Testo scuro per contrasto */
@@ -157,6 +157,9 @@ p {
  transition: opacity 0.3s
 }
 
+#rsvpForm .btn[type="submit"] {
+  margin-top: 20px; /* Aggiunge spazio sopra il bottone */
+}
 
 #rsvpForm .btn:hover {
   opacity: 0.8;
